Go to "Sessions Management" faster 😄
This update provides a direct link to the Session Management page within the extension's main menu (in the toolbar), within the context menu (right-click), and within the available Shortcuts.
Fix for #116 #224

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -392,7 +392,7 @@ a.historyLink:hover {
     margin-left: 28px;
 }
 
-/* conatiner for a group of sessions */
+/* container for a group of sessions */
 .sessionsContainer {
     margin-bottom: 50px;
 }
