--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,19 +1,10 @@
-/*
-
-                - - /|_/|      .-------------------.
-  - _______________| @.@|     /      Styles by      )
--- (______         >\_C/< ---/    Liam Johnston    /
-  -  -   / ______  _/____)  (   @liamjohnstonnz   /
- -  -   / /\ \   \ \         `-------------------'
-   - (_/  \_) - \_)
-
-*/
 html,
 body {
     margin: 0;
     padding: 0;
     min-height: 100%;
     font-size: 10px;
+    visibility: hidden;
 }
 
 html {
@@ -29,9 +20,7 @@ html {
 
 body {
     min-height: 100%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-    'Segoe UI Symbol';
+    font-family: system-ui, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-size: 1.5rem;
     line-height: 1.5em;
     background: #fafafa;
@@ -51,7 +40,7 @@ body {
     justify-content: center;
     /*
     vertical center usually looks a little better but some pages have content
-    which changes height (accordion etc) so this doens't really work
+    which changes height (accordion etc) so this doesn't really work
     */
     /* align-items: center; */
 }
@@ -432,13 +421,16 @@ a.historyLink:hover {
     padding: 10px 0 10px 10px;
 }
 
-.keyboardShortcuts {
-    display: grid;
-    grid-template-columns: auto auto;
+#keyboardShortcuts {
+  display: grid;
+  grid-template-columns: max-content max-content;
 }
-
-.keyboardShortcuts div {
-    margin: 0 0 2px;
+#keyboardShortcuts div {
+  /* line-height:1.5rem; */
+  margin: 0 1rem 0.5rem
+}
+#keyboardShortcuts div.marginTop {
+  margin-top: 2rem;
 }
 
 .bottomMargin {
@@ -447,6 +439,7 @@ a.historyLink:hover {
 
 .hotkeyCommand {
     word-spacing: -1px;
+    font-weight: 600;
 }
 
 /* custom checkboxes */
@@ -565,7 +558,7 @@ input[type='checkbox']:checked + label:before {
     padding: 4px 2px;
     min-width: 500px;
     border-radius: 4px;
-    border: 1px solid #e8e8e8;
+    border: 1px solid #ccc;
     pointer-events: none;
     padding: 24px 24px 32px;
     z-index: 99;
@@ -609,31 +602,50 @@ input[type='checkbox']:checked + label:before {
 
 
 /* dark theme */
-.dark, .dark .option, .dark .historyLink {
+/* Automatically set dark background based on OS settings */
+/* This prevents flickering on initial page load */
+@media (prefers-color-scheme: dark) {
+
+body, .option, .historyLink {
     background: #222;
     color: #ccc;
 }
 
+}
+
+/* when the OS is set to dar, but the user selects light mode, override the media query */
+.light, .light .option, .light .historyLink {
+    background: #fafafa;
+    color: #444;
+}
+
+/* set all explicit dark styles */
+.dark, .dark .option, .dark .historyLink {
+    background: #222;
+    color: #ccc;
+}
 .dark .tooltipIcon {
     color: white;
 }
-
-.dark .btn {
-    background: #3477db;
+.dark [data-i18n-tooltip]::after {
+    background: #333;
+    color: #aaa;
+    border: 1px solid #aaa;
 }
 
 
-/* tab groups light  */
+/* tab groups */
 span.group {
   color: #fff;
   border-radius: 6px;
   font-size: 0.8em;
-  padding: 0 5px;
+  padding: 0 5px 2px;
 }
 div.sessionContainer span.group {
   margin: 0 8px 0 0;
 }
 
+/* tab group colors for light mode  */
 span.group.chrome.grey {
   background: #5f6368
 }
@@ -691,7 +703,7 @@ span.group.edge.orange {
 }
 
 
-/* tab groups dark */
+/* tab group colors for dark mode  */
 
 body.dark {
 span.group {
