--- a/src/css/suspended.css
+++ b/src/css/suspended.css
@@ -1,67 +1,5 @@
-/*
+/* style.css is included in addition to this file */
 
-                - - /|_/|      .-------------------.
-  - _______________| @.@|     /      Styles by      )
--- (______         >\_C/< ---/    Liam Johnston    /
-  -  -   / ______  _/____)  (   @liamjohnstonnz   /
- -  -   / /\ \   \ \         `-------------------'
-   - (_/  \_) - \_)
-
-*/
-html,
-body {
-    margin: 0;
-    padding: 0;
-    min-height: 100%;
-    font-size: 10px;
-}
-html {
-    box-sizing: border-box;
-    height: 100vh;
-}
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
-}
-body {
-    min-height: 100%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-    'Segoe UI Symbol';
-    font-size: 1.5rem;
-    line-height: 1.5em;
-    background: #fafafa;
-    color: #444;
-}
-@media (min-resolution: 192dpi) {
-    body {
-        font-weight: 300;
-    }
-}
-h1 {
-    font-size: 26px;
-    margin-bottom: 20px;
-}
-p {
-    margin: 0 0 15px;
-}
-a {
-    color: #3477db;
-    text-decoration: none;
-    cursor: pointer;
-}
-a:hover {
-    text-decoration: underline;
-}
-a.active {
-    cursor: default;
-    color: #444;
-    pointer-events: none;
-}
-body.hide-initially {
-    display: none !important;
-}
 body.suspended-page:not(.img-preview-mode) {
     display: flex;
     align-items: center;
@@ -87,7 +25,7 @@ body.suspended-page:not(.img-preview-mode) {
 }
 .gsTopBar {
     position: fixed;
-    background: #fafafa;
+    background: inherit;
     top: 0;
     left: 0;
     padding: 30px 40px 20px;
@@ -109,12 +47,12 @@ body.suspended-page:not(.img-preview-mode) {
     width: 16px;
 }
 .gsTopBarTitle {
-    color: #444;
+    color: inherit;
     font-size: 20px;
     cursor: default;
 }
 .gsTopBarUrl {
-    color: #444;
+    color: inherit;
     cursor: pointer;
     padding: 0 20px;
 }
@@ -232,26 +170,6 @@ body.img-preview-mode .gsTopBar {
     }
 }
 
-/* dark theme for night lurkers */
-.dark,
-.dark .gsTopBar,
-.dark .suspendedMsg {
-    background: #222;
-}
-.dark .suspendedMsg img {
-    filter: brightness(150%);
-}
-.dark .gsTopBar,
-.dark .gsTopBarTitle,
-.dark .gsTopBar a,
-.dark .suspendedMsg,
-.dark .watermark {
-    color: #b8b8b8;
-}
-.dark #setKeyboardShortcut {
-    text-decoration: underline;
-    color: #b8b8b8;
-}
 
 /* end suspended tab styles */
 
