--- a/src/css/style.css
+++ b/src/css/style.css
@@ -471,6 +471,12 @@ input[type='checkbox']:checked + label:before {
     color: #3477db;
 }
 
+input[type='text'] {
+    border: 1px solid;
+    border-radius: 5px;
+    padding: 4px;
+}
+
 /* custom radio btns */
 .radio {
     position: relative;
