Fix suspended page load race condition
The original migration to manifest V3 missed an "await" in tgs.  The
result was a race condition that would cause suspended tabs to
"quickInit" instead of fully loading on browser launch.

This might help with reported page load issues #276 #260

This commit also adjusts the automatic theme selection to use class
names instead of direct style visibility.  gsUtils was clobbering
the body classList, which is fixed here too.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -232,6 +232,9 @@ ul.unorderedList li {
 .hidden {
     visibility: hidden;
 }
+.visible {
+    visibility: visible !important;
+}
 .reallyHidden {
     display: none;
 }
