--- a/src/css/style.css
+++ b/src/css/style.css
@@ -80,7 +80,7 @@ a.active {
 
 hr {
     border-width: 0;
-    border-top: 1px solid #e7e7e7;
+    border-top: 1px solid #888;
     height: 1px;
     margin: 23px 0;
 }
@@ -157,16 +157,16 @@ ul.unorderedList li {
     list-style: disc;
 }
 
+#tmsUpdateAvailable .splash {
+    margin: 0 auto;
+    cursor: default;
+}
 .splash {
     padding: 0 20px;
     margin: 50px auto;
     display: grid;
     grid-template-columns: 150px 1fr;
     grid-gap: 30px;
-}
-
-.splash:not(.welcome-message) {
-    width: 900px;
 }
 
 .suspendy-guy {
@@ -265,7 +265,7 @@ ul.unorderedList li {
 
 .contentNav {
     grid-area: n;
-    border-right: 1px solid #ddd;
+    border-right: 1px solid #888;
     padding-right: 15px;
     align-self: start;
 }
@@ -306,13 +306,14 @@ ul.unorderedList li {
 }
 
 .welcome-message {
+    width: 90%;
     border-radius: 6px;
-    background: #fff;
     padding: 30px;
     margin-bottom: 20px;
     align-items: center;
     grid-gap: 40px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    border: 1px solid #888;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .gsNote {
@@ -622,7 +623,7 @@ body, .option, .historyLink {
 
 }
 
-/* when the OS is set to dar, but the user selects light mode, override the media query */
+/* when the OS is set to dark, but the user selects light mode, override the media query */
 .light, .light .option, .light .historyLink {
     background: #fafafa;
     color: #444;
