Set default CSS of #tmsUpdateAvailable to display: none

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -157,6 +157,9 @@ ul.unorderedList li {
     list-style: disc;
 }
 
+#tmsUpdateAvailable {
+  display: none;
+}
 #tmsUpdateAvailable .splash {
     margin: 0 auto;
     cursor: default;
